--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,13 +1,12 @@
 # azure-pipelines.yml — Windows, two stages, pass file via artifacts
-
 trigger:
 - main
+
 
 pool:
   name: 12345
 
 stages:
-
 - stage: Create
   displayName: 'Creating file'
   jobs:
@@ -15,7 +14,7 @@ stages:
     steps:
     - checkout: self
 
-    - pwsh: |
+    - powershell: |
         Write-Host "creating file"
         $path = "$(Build.SourcesDirectory)\test.txt"
         "Hello from Create stage" | Set-Content -Path $path -Encoding utf8
@@ -25,10 +24,9 @@ stages:
     - task: PublishPipelineArtifact@1
       displayName: Publish test.txt as pipeline artifact
       inputs:
-        targetPath: '$(Build.SourcesDirectory)\test.txt'  
+        targetPath: '$(Build.SourcesDirectory)\test.txt'
         artifact: 'test-file'
         publishLocation: 'pipeline'
-
 
 - stage: Write
   displayName: 'Writing in file'
@@ -39,9 +37,9 @@ stages:
     - checkout: none
 
     - download: current
-      artifact: 'test-file' 
+      artifact: 'test-file'   # -> $(Pipeline.Workspace)\test-file\test.txt
 
-    - pwsh: |
+    - powershell: |
         $path = "$(Pipeline.Workspace)\test-file\test.txt"
         Write-Host "Before:"
         Get-Content $path
